force-app/main/default/objects/BMCServiceDesk__Status__c/BMCServiceDesk__Status__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for status records.</description>
    <label>Status</label>
    <nameField>
        <label>Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>