force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToBroadcasts__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToBroadcasts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field to make this status available when you create broadcast records.</inlineHelpText>
    <label>Applies to Broadcasts</label>
    <type>Checkbox</type>
</CustomField>