force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToChange__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field to make this status available when you create Change Request.</inlineHelpText>
    <label>Applies to Change</label>
    <type>Checkbox</type>
</CustomField>