force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToChangeApprovals__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToChangeApprovals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies To Change Approvals</label>
    <type>Checkbox</type>
</CustomField>