force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToChangeAssessment__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToChangeAssessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies To Change Assessment</label>
    <type>Checkbox</type>
</CustomField>