force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToConfigurationItems__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToConfigurationItems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies to Configuration Items</label>
    <type>Checkbox</type>
</CustomField>