force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToPreventiveMaintenance__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToPreventiveMaintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies to Preventive Maintenance</label>
    <type>Checkbox</type>
</CustomField>