force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToProblem__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToProblem__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field to make this status available when you create Problem.</inlineHelpText>
    <label>Applies to Problem</label>
    <type>Checkbox</type>
</CustomField>