force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToRelease__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToRelease__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field to make this status available when you create release records.</inlineHelpText>
    <label>Applies To Release</label>
    <type>Checkbox</type>
</CustomField>