force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToServices__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToServices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies to Services</label>
    <type>Checkbox</type>
</CustomField>