force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToSLA__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies to SLA</label>
    <type>Checkbox</type>
</CustomField>