force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__appliesToTask__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToTask__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this field to make this status available when you create task records.</inlineHelpText>
    <label>Applies to Task</label>
    <type>Checkbox</type>
</CustomField>