force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__defaultMergeStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__defaultMergeStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field to assign the status as the default link status when you create, open or close records. You can create multiple statuses with the Open and Closed states, but only one status can be the default link status for the Open and Closed states.</inlineHelpText>
    <label>Default Link Status</label>
    <type>Checkbox</type>
</CustomField>