force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__Stage__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Stage__c</fullName>
    <formula>BMCServiceDesk__FKSYSStage__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage~</label>
    <type>Text</type>
</CustomField>