force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__stageProgression__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__stageProgression__c</fullName>
    <formula>BMCServiceDesk__FKSYSStage__r.BMCServiceDesk__Order__c</formula>
    <label>Stage Progression</label>
    <type>Text</type>
</CustomField>