force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__state__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__state__c</fullName>
    <defaultValue>true</defaultValue>
    <label>State</label>
    <type>Checkbox</type>
</CustomField>