force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__system__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__system__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System</label>
    <type>Checkbox</type>
</CustomField>