force-app/main/default/objects/BMCServiceDesk__Status__c/fields/BMCServiceDesk__workStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__workStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field to calculate the total time spend on incident until it is closed.</inlineHelpText>
    <label>Work Status</label>
    <type>Checkbox</type>
</CustomField>