force-app/main/default/objects/BMCServiceDesk__Status__c/validationRules/BMCServiceDesk__Status_required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Status_required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
    <errorMessage>Please enter value in Status field.</errorMessage>
</ValidationRule>