force-app/main/default/objects/BMCServiceDesk__Status__c/validationRules/BMCServiceDesk__StatusUniqueCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__StatusUniqueCheck</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Status__c.Fields.Name , $ObjectType.BMCServiceDesk__Status__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__Status__c.Fields.Name , $ObjectType.BMCServiceDesk__Status__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
    <errorMessage>A record with this Status already exists. Enter unique Status.</errorMessage>
</ValidationRule>