force-app/main/default/objects/BMCServiceDesk__Status__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__defaultStatus__c</columns>
    <columns>BMCServiceDesk__state__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>