force-app/main/default/objects/BMCServiceDesk__Status__c/listViews/BMCServiceDesk__All1.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All1</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>